# Web_module_14_HW

./: main.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 0765436c6b13_add_field_confirmed.py  47d9f2e7bc63_init.py  c36ed60e87ec_add_user.py  ca3579bf5c36_add_role_of_user.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619
postgres-data/base/16384/: 1247  1249  1259  2579  2606  2608  2610  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455
postgres-data/base/16403/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13370  13370_fsm  13370_vm  13375  13375_fsm  13375_vm  13380  13380_fsm  13380_vm  13384  13385  13385_fsm  13385_vm  13389  175  2228  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  2602  2602_fsm  2602_vm  2603  2603_fsm  (+161 more)
postgres-data/global/: 1260  1262  2671  2672  pg_control
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: clients.py  users.py
src/routes/: auth.py  clients.py  users.py
src/services/: auth.py  cloud_image.py  email.py
tests/: test_route_auth.py  test_unit_repository_clients.py  test_unit_repository_users.py
